# caracal

./: .gitignore  CODE_OF_CONDUCT.md  go.work  go.work.sum  install.ps1  install.sh  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
docs/: NOTE.md
examples/lynxCapital/: INSTRUCTIONS.md  README.md  pyproject.toml
examples/lynxCapital/_mock/: Dockerfile  docker-compose.yml  registry.yaml  run_sse_fx.py
examples/lynxCapital/_mock/close-engine.mock/: cases.json
examples/lynxCapital/_mock/compliance-nexus.mock/: cases.json
examples/lynxCapital/_mock/customer-billing.mock/: cases.json
examples/lynxCapital/_mock/regulatory-filings.mock/: cases.json
examples/lynxCapital/_mock/rest/routers/: mercury_bank.py  ocr_vision.py  quickbooks.py  regulatory_filings.py  sap_erp.py  stripe_treasury.py  wise_payouts.py
examples/lynxCapital/_mock/sdk/lynx_sdk_stripe_treasury/: pyproject.toml
examples/lynxCapital/_mock/treasury-ops.mock/: cases.json
examples/lynxCapital/_mock/vendor-portal.mock/: cases.json
examples/lynxCapital/app/: config.py  main.py
examples/lynxCapital/app/agents/: runner.py  tools.py
examples/lynxCapital/app/api/: __init__.py  hooks.py  run.py  setup.py
examples/lynxCapital/app/core/: blackboard.py  jobs.py  memory.py  session_memory.py  workers.py
examples/lynxCapital/app/events/: types.py
examples/lynxCapital/app/orchestration/: swarm.py
examples/lynxCapital/app/web/: router.py
examples/lynxCapital/config/: company.yaml
examples/lynxCapital/tests/: conftest.py  test_lifecycle.py  test_lifecycle_long.py  test_provider_transports.py
(+170 files in other folders)
