[project]
name = "lynx-sdk-tax"
version = "0.1.0"
description = "Internal tax-rules SDK shim used by LynxCapital"
requires-python = ">=3.11"
dependencies = ["httpx>=0.27"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
